# sly

./: CHANGES  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  setup.cfg  setup.py
docs/: api-ref.rst  conf.py  index.rst  sly.rst
example/calc/: calc.py
example/calc_ebnf/: calc.py
example/calc_prec/: calc.py
example/conflict/: c.py  calc.py  decl_expr.py  ifelse.py
example/schcls/: schcls.py
example/wasm/: expr.py  test.e  test.html  wasm.py
sly/: __init__.py  _meta.py  docparse.py  lex.py  yacc.py
src/sly/: yacc.py
tests/: test_ebnf.py  test_lex.py  test_parser.py
