[metadata]
name = sly
version = 0.5
url = https://github.com/dabeaz/sly
author = David Beazley
author_email = "David Beazley" <dave@dabeaz.com>
description = "SLY - Sly Lex Yacc"
long_description = "SLY is an implementation of lex and yacc"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src

packages = find:

[options.packages.find]
where = src

[tool.pytest]
testpaths = test

[coverage:run]
branch = True

[tox:tox]
isolated_build = True
envlist = py311,py310,py39

[testenv]
deps =
    pytest
    pytest-cov

commands = pytest {posargs}
